--- a/public/css/master.less
+++ b/public/css/master.less
@@ -19,6 +19,10 @@ h1, h2, h3, h4, h5, h6 {
 	//width: calc(100% - 32px);
 }
 
+.mdl-card__supporting-text a {
+	text-decoration: none;
+}
+
 .drawer-navigation {
 	flex-grow: 1;
 }
@@ -45,19 +49,23 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: 'Roboto', Calibri, sans-serif;
 	font-size: 20px;
 }
+
 .pagination > li {
 	display: inline-block;
 	*display: inline; /* This fix is needed for IE7- */
 	padding: 0 10px;
 	zoom: 1;
 }
+
 .pagination > li > a {
 	color: #555;
 	text-decoration: none;
 }
+
 .pagination > li > a:hover {
 	color: #000;
 }
+
 .pagination > li > span {
 	color: #999;
 	cursor: default;
@@ -78,46 +86,69 @@ h1, h2, h3, h4, h5, h6 {
 
 #spotlight {
 	width: 100%;
-	height: 250px;
+	background-color: rgb(66, 66, 66);
+	color: white;
 	overflow: hidden;
 	white-space: nowrap;
-	font-size: 0;
+	font-size: 14px;
 
-	.spotlight-content {
-		width: auto;
-		height: 100%;
-		position: relative;
-		display: inline-block;
-		overflow: hidden;
-		font-size: 14px;
+	p {
+		margin: 16px;
+		font-size: 2em;
+		font-style: italic;
+		text-transform: capitalize;
+	}
+}
 
-		.spotlight-description {
-			height: 20px;
-			position: absolute;
-			bottom: 0;
-			right: 0;
-			left: 0;
-			background-color: rgba(16, 34, 47, 0.7);
-			padding: 15px;
+.spotlight-content {
+	width: auto;
+	height: 250px;
+	background-color: rgba(0, 0, 0, .3);
+	position: relative;
+	display: inline-block;
+	overflow: hidden;
 
-			.transition(all 250ms ease-out);
-		}
-
-		&:hover .spotlight-description {
-			background-color: rgba(10, 10, 10, 0.8);
-			height: 50px;
+	&:hover {
+		.spotlight-overlay {
+			background-color: rgba(0, 0, 0, .5);
 		}
 	}
+}
 
-	.spotlight-link {
-		text-decoration: none;
-		color: white;
-	}
+.spotlight-description {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	left: 0;
+	background-color: rgb(122, 171, 0);
+	padding: 10px;
 
-	.spotlight-img {
-		width: auto;
-		height: 100%;
-	}
+	.transition(all 200ms ease-out);
+}
+
+.spotlight-episode {
+	font-weight: bold;
+	text-align: right;
+}
+
+.spotlight-link {
+	text-decoration: none;
+	color: white;
+}
+
+.spotlight-img {
+	width: auto;
+	height: 100%;
+}
+
+.spotlight-overlay {
+	position: absolute;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: transparent;
+
+	.transition(all 100ms ease-in);
 }
 
 /** Anime **/
@@ -156,7 +187,7 @@ h1, h2, h3, h4, h5, h6 {
 /** Mixins **/
 .transition(@transition) {
 	-webkit-transition: @transition;
-	-moz-transition:    @transition;
-	-ms-transition:     @transition;
-	-o-transition:      @transition;
+	-moz-transition: @transition;
+	-ms-transition: @transition;
+	-o-transition: @transition;
 }
