--- a/public/css/master.css
+++ b/public/css/master.css
@@ -95,7 +95,7 @@ h6 {
   margin: 16px;
   font-size: 2em;
   font-style: italic;
-  text-transform: capitalize;
+  text-transform: uppercase;
 }
 .spotlight-content {
   width: auto;
