--- a/public/css/master.less
+++ b/public/css/master.less
@@ -110,7 +110,7 @@ h1, h2, h3, h4, h5, h6 {
 		margin: 16px;
 		font-size: 2em;
 		font-style: italic;
-		text-transform: capitalize;
+		text-transform: uppercase;
 	}
 }
 
