--- a/resources/assets/sass/_spotlight.scss
+++ b/resources/assets/sass/_spotlight.scss
@@ -144,8 +144,8 @@
 }
 
 .calendar-label {
-	height: 250px;
-	margin: 10px;
+	height: 240px;
+	margin: 0 10px;
 	text-align: right;
 	font-size: 1.5em;
 	display: inline;
