--- a/resources/assets/sass/_spotlight.scss
+++ b/resources/assets/sass/_spotlight.scss
@@ -132,15 +132,18 @@
 .spotlight-img {
 	width: auto;
 	height: 100%;
+	-ms-interpolation-mode: bicubic; // Fixes image aliasing on IE
+	@include transition(filter 200ms ease-out);
 }
 
-.spotlight-overlay {
-	position: absolute;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	background-color: transparent;
-	@include transition(all 100ms ease-in);
+.spotlight-content:hover {
+	.spotlight-description {
+		background-color: $theme;
+	}
+
+	.spotlight-img {
+		@include filter(blur(3px));
+	}
 }
 
 .calendar-label {
