Text in the spotlight items is now ellipsed when too large.

--- a/resources/assets/sass/_spotlight.scss
+++ b/resources/assets/sass/_spotlight.scss
@@ -116,6 +116,8 @@
 	background-color: $theme-90;
 	padding: 10px;
 	font-weight: bold;
+	overflow: hidden;
+	text-overflow: ellipsis;
 	@include transition(all 200ms ease-out);
 }
 
