Improved the episode download section.
Download management is WIP.

--- a/resources/assets/sass/_colors.scss
+++ b/resources/assets/sass/_colors.scss
@@ -1,6 +1,9 @@
-$theme: rgba(122, 171, 0, 1);
-$theme-90: rgba($theme, .9);
-$theme-80: rgba($theme, .8);
-$theme-60: rgba($theme, .6);
-$theme-40: rgba($theme, .4);
-$theme-20: rgba($theme, .2);
+$main: rgba(122, 171, 0, 1);
+$main-90: rgba($main, .9);
+$main-80: rgba($main, .8);
+$theme-60: rgba($main, .6);
+$theme-40: rgba($main, .4);
+$theme-20: rgba($main, .2);
+
+$accent: #424242;
+$accent-80: rgba($accent, .8);
