--- a/resources/assets/sass/_layout.scss
+++ b/resources/assets/sass/_layout.scss
@@ -4,7 +4,7 @@
 
 .mdl-layout__drawer-button {
 	@media screen and (max-width: 1024px) {
-		background-color: $theme;
+		background-color: $main;
 	}
 }
 
