Anime page: Text now wraps around the cover

--- a/resources/assets/sass/_anime.scss
+++ b/resources/assets/sass/_anime.scss
@@ -25,17 +25,20 @@
 
 	&__content {
 		background-color: rgba(150, 150, 150, 0.5);
-		display: flex;
 		position: relative;
 
 		&__synopsis {
-			padding: 25px;
+			display: inline-block;
+			padding: 25px 25px 0 25px;
 			color: white;
-		}
-	}
 
-	img {
-		width: 200px;
+			img {
+				cursor: pointer;
+				float: left;
+				width: 200px;
+				margin: -25px 25px 0 -25px;
+			}
+		}
 	}
 }
 
