--- a/resources/assets/sass/_layout.scss
+++ b/resources/assets/sass/_layout.scss
@@ -36,6 +36,7 @@
 
 	&__supporting-text {
 		width: initial;
+		overflow: visible;
 	}
 
 	&__title-text a, &__supporting-text a {
@@ -116,6 +117,9 @@
 // Search
 .highlight {
 	background-color: #FFFF00;
+	color: inherit !important;
+	font-size: inherit !important;
+	font-weight: inherit !important;
 }
 
 // Login
